# LearningGraphics

./: .gitignore  CMakeLists.txt  LearningGraphics.cpp  LearningGraphics.h
include/: Loader.h  Models.h  Renderer.h  Shaders.h  Utils.h  glad.h
shaders/: static.frag  static.vert
src/: Loader.cpp  Renderer.cpp  Shaders.cpp  Utils.cpp  glad.c  main.cpp
